第二次提交

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>echarmap-demo</title>
+    <title>echarts-map-demo</title>
     <script src="/static/echarts.min.4.1.0.js"></script>
     <script src="/static/china.js"></script>
   </head>
